sqlalg/target/generated-sources/antlr4/compiladores/sqlalg/SqlalgParser.java
// Generated from compiladores\sqlalg\Sqlalg.g4 by ANTLR 4.8
package compiladores.sqlalg;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SqlalgParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, CADEIA=40, VARIAVEL=41, NUM_INT=42, NUM_REAL=43, HORA=44, DATA=45, 
		DATAHORA=46, WS=47, COMENTARIO=48, COMENTARIO_ABERTO=49, ANY=50;
	public static final int
		RULE_programa = 0, RULE_criacao = 1, RULE_tipo = 2, RULE_insercao = 3, 
		RULE_dado = 4, RULE_selecao = 5, RULE_subselecao = 6, RULE_atualizacao = 7, 
		RULE_mais_dado = 8, RULE_mais_var = 9, RULE_condicao = 10, RULE_agregacao = 11, 
		RULE_contador = 12, RULE_agrupa = 13, RULE_op = 14, RULE_deleta = 15, 
		RULE_comando = 16, RULE_corpo = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "criacao", "tipo", "insercao", "dado", "selecao", "subselecao", 
			"atualizacao", "mais_dado", "mais_var", "condicao", "agregacao", "contador", 
			"agrupa", "op", "deleta", "comando", "corpo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'algoritmo'", "'fim_algoritmo'", "'cria'", "'('", "','", "'chave_primaria'", 
			"')'", "'chave_estrangeira'", "'de'", "'inteiro'", "'literal'", "'['", 
			"']'", "'real'", "'caractere'", "'data'", "'hora'", "'data_hora'", "'insere'", 
			"'='", "'escreva'", "'.'", "'se'", "'escreva_tudo_de'", "'atualiza'", 
			"'media'", "'maximo'", "'minimo'", "'soma'", "'contador'", "'agrupado'", 
			"'ordenado'", "'<>'", "'<='", "'>='", "'<'", "'>'", "'deleta'", "'descarta'", 
			null, null, null, null, null, null, null, null, null, "'{'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "CADEIA", "VARIAVEL", "NUM_INT", "NUM_REAL", 
			"HORA", "DATA", "DATAHORA", "WS", "COMENTARIO", "COMENTARIO_ABERTO", 
			"ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sqlalg.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlalgParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__0);
			setState(37);
			corpo();
			setState(38);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CriacaoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(SqlalgParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(SqlalgParser.VARIAVEL, i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<Mais_varContext> mais_var() {
			return getRuleContexts(Mais_varContext.class);
		}
		public Mais_varContext mais_var(int i) {
			return getRuleContext(Mais_varContext.class,i);
		}
		public CriacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterCriacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitCriacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitCriacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CriacaoContext criacao() throws RecognitionException {
		CriacaoContext _localctx = new CriacaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_criacao);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__2);
			setState(41);
			match(VARIAVEL);
			setState(42);
			match(T__3);
			setState(43);
			tipo();
			setState(44);
			match(VARIAVEL);
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(45);
					match(T__4);
					setState(46);
					tipo();
					setState(47);
					match(VARIAVEL);
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(54);
			match(T__4);
			setState(55);
			match(T__5);
			setState(56);
			match(VARIAVEL);
			setState(57);
			match(T__3);
			setState(58);
			match(VARIAVEL);
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(59);
				mais_var();
				}
				break;
			}
			setState(62);
			match(T__6);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(63);
				match(T__4);
				setState(64);
				match(T__7);
				setState(65);
				match(VARIAVEL);
				setState(66);
				match(T__3);
				setState(67);
				match(VARIAVEL);
				setState(69);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(68);
					mais_var();
					}
					break;
				}
				setState(71);
				match(T__6);
				setState(72);
				match(T__8);
				setState(73);
				match(VARIAVEL);
				setState(74);
				match(T__3);
				setState(75);
				match(VARIAVEL);
				setState(77);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(76);
					mais_var();
					}
					break;
				}
				setState(79);
				match(T__6);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode NUM_INT() { return getToken(SqlalgParser.NUM_INT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tipo);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(T__9);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(88);
				match(T__10);
				setState(89);
				match(T__11);
				setState(90);
				match(NUM_INT);
				setState(91);
				match(T__12);
				}
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				match(T__13);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(93);
				match(T__14);
				setState(94);
				match(T__11);
				setState(95);
				match(NUM_INT);
				setState(96);
				match(T__12);
				}
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				match(T__15);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				match(T__16);
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				match(T__17);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsercaoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(SqlalgParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(SqlalgParser.VARIAVEL, i);
		}
		public DadoContext dado() {
			return getRuleContext(DadoContext.class,0);
		}
		public Mais_dadoContext mais_dado() {
			return getRuleContext(Mais_dadoContext.class,0);
		}
		public InsercaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insercao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterInsercao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitInsercao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitInsercao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsercaoContext insercao() throws RecognitionException {
		InsercaoContext _localctx = new InsercaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_insercao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__18);
			setState(103);
			match(VARIAVEL);
			setState(104);
			match(T__3);
			setState(105);
			match(VARIAVEL);
			setState(106);
			match(T__19);
			setState(107);
			dado();
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(108);
				mais_dado();
				}
				break;
			}
			setState(111);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DadoContext extends ParserRuleContext {
		public TerminalNode NUM_INT() { return getToken(SqlalgParser.NUM_INT, 0); }
		public TerminalNode NUM_REAL() { return getToken(SqlalgParser.NUM_REAL, 0); }
		public TerminalNode CADEIA() { return getToken(SqlalgParser.CADEIA, 0); }
		public TerminalNode DATA() { return getToken(SqlalgParser.DATA, 0); }
		public TerminalNode HORA() { return getToken(SqlalgParser.HORA, 0); }
		public TerminalNode DATAHORA() { return getToken(SqlalgParser.DATAHORA, 0); }
		public DadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterDado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitDado(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitDado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DadoContext dado() throws RecognitionException {
		DadoContext _localctx = new DadoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dado);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CADEIA) | (1L << NUM_INT) | (1L << NUM_REAL) | (1L << HORA) | (1L << DATA) | (1L << DATAHORA))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelecaoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(SqlalgParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(SqlalgParser.VARIAVEL, i);
		}
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public Mais_varContext mais_var() {
			return getRuleContext(Mais_varContext.class,0);
		}
		public AgrupaContext agrupa() {
			return getRuleContext(AgrupaContext.class,0);
		}
		public AgregacaoContext agregacao() {
			return getRuleContext(AgregacaoContext.class,0);
		}
		public ContadorContext contador() {
			return getRuleContext(ContadorContext.class,0);
		}
		public SelecaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selecao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterSelecao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitSelecao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitSelecao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelecaoContext selecao() throws RecognitionException {
		SelecaoContext _localctx = new SelecaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selecao);
		int _la;
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(T__20);
				setState(116);
				match(VARIAVEL);
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__21) {
					{
					setState(117);
					match(T__21);
					setState(118);
					match(VARIAVEL);
					}
				}

				setState(122);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(121);
					mais_var();
					}
					break;
				}
				setState(124);
				match(T__22);
				setState(125);
				condicao();
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__30 || _la==T__31) {
					{
					setState(126);
					agrupa();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(T__23);
				setState(130);
				match(VARIAVEL);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__30 || _la==T__31) {
					{
					setState(131);
					agrupa();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(T__20);
				setState(137);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__25:
				case T__26:
				case T__27:
				case T__28:
					{
					setState(135);
					agregacao();
					}
					break;
				case T__29:
					{
					setState(136);
					contador();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(139);
				match(T__8);
				setState(140);
				match(VARIAVEL);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__22) {
					{
					setState(141);
					match(T__22);
					setState(142);
					condicao();
					}
				}

				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__30 || _la==T__31) {
					{
					setState(145);
					agrupa();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubselecaoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(SqlalgParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(SqlalgParser.VARIAVEL, i);
		}
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public Mais_varContext mais_var() {
			return getRuleContext(Mais_varContext.class,0);
		}
		public AgregacaoContext agregacao() {
			return getRuleContext(AgregacaoContext.class,0);
		}
		public ContadorContext contador() {
			return getRuleContext(ContadorContext.class,0);
		}
		public SubselecaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subselecao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterSubselecao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitSubselecao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitSubselecao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubselecaoContext subselecao() throws RecognitionException {
		SubselecaoContext _localctx = new SubselecaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subselecao);
		int _la;
		try {
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(T__20);
				setState(151);
				match(VARIAVEL);
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__21) {
					{
					setState(152);
					match(T__21);
					setState(153);
					match(VARIAVEL);
					}
				}

				setState(157);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(156);
					mais_var();
					}
					break;
				}
				setState(159);
				match(T__22);
				setState(160);
				condicao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				match(T__23);
				setState(162);
				match(VARIAVEL);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				match(T__20);
				setState(166);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__25:
				case T__26:
				case T__27:
				case T__28:
					{
					setState(164);
					agregacao();
					}
					break;
				case T__29:
					{
					setState(165);
					contador();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(168);
				match(T__8);
				setState(169);
				match(VARIAVEL);
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__22) {
					{
					setState(170);
					match(T__22);
					setState(171);
					condicao();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtualizacaoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(SqlalgParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(SqlalgParser.VARIAVEL, i);
		}
		public DadoContext dado() {
			return getRuleContext(DadoContext.class,0);
		}
		public Mais_dadoContext mais_dado() {
			return getRuleContext(Mais_dadoContext.class,0);
		}
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public AtualizacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atualizacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterAtualizacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitAtualizacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitAtualizacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtualizacaoContext atualizacao() throws RecognitionException {
		AtualizacaoContext _localctx = new AtualizacaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atualizacao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(T__24);
			setState(177);
			match(VARIAVEL);
			setState(178);
			match(T__3);
			setState(179);
			match(VARIAVEL);
			setState(180);
			match(T__19);
			setState(181);
			dado();
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				setState(182);
				mais_dado();
				}
				break;
			}
			setState(185);
			match(T__6);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__22) {
				{
				setState(186);
				match(T__22);
				setState(187);
				condicao();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mais_dadoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(SqlalgParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(SqlalgParser.VARIAVEL, i);
		}
		public List<DadoContext> dado() {
			return getRuleContexts(DadoContext.class);
		}
		public DadoContext dado(int i) {
			return getRuleContext(DadoContext.class,i);
		}
		public Mais_dadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_dado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterMais_dado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).exitMais_dado(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlalgVisitor ) return ((SqlalgVisitor<? extends T>)visitor).visitMais_dado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_dadoContext mais_dado() throws RecognitionException {
		Mais_dadoContext _localctx = new Mais_dadoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mais_dado);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(190);
				match(T__4);
				setState(191);
				match(VARIAVEL);
				setState(192);
				match(T__19);
				setState(193);
				dado();
				}
				}
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mais_varContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(SqlalgParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(SqlalgParser.VARIAVEL, i);
		}
		public Mais_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlalgListener ) ((SqlalgListener)listener).enterMais_var(this);
		}
		@Override
